# Movie-Idea-Generator-Agent

./: .cursorignore  .gitignore  README.md  advanced_fixes.py  format_and_check.sh  format_and_fix.sh  pyproject.toml  run_advanced_fixes.sh  run_all_tests.sh  run_tests_and_checks.sh
.github/workflows/: pylint.yml  python-app.yml
movie_idea_generator/: .gitignore  Pipfile  README.md  conftest.py  pyproject.toml  run.py  run_tests.sh  setup.py
movie_idea_generator/src/: main.py
movie_idea_generator/src/agents/: genre_analyzer_agent.py  idea_generator_agent.py  recommendation_agent.py
movie_idea_generator/src/config/: config.py  env.py  llm.py
movie_idea_generator/tests/: README.md  __init__.py  conftest.py  stubs.py
movie_idea_generator/tests/integration/: test_workflow.py
movie_idea_generator/tests/unit/: test_env.py  test_genre_analyzer_agent.py  test_idea_generator_agent.py  test_main.py  test_recommendation_agent.py
recommender_api/: .gitignore  README.md  pyproject.toml  run_tests.sh
recommender_api/app/: main.py
recommender_api/data/: data.json
recommender_api/tests/: README.md  __init__.py  conftest.py  stubs.py
recommender_api/tests/integration/: test_api_workflow.py
recommender_api/tests/unit/: test_api.py  test_models.py
