[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movie_idea_generator"
version = "0.1.0"
description = "A CrewAI-powered application that generates creative movie ideas"
authors = [
    {name = "Movie Ideas Team", email = "example@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "crewai>=0.28.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = ["src"] 