[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movie_idea_generator"
version = "0.1.0"
description = "CrewAI-powered movie idea generator"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "crewai",
    "langchain", 
    "requests",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=src"
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.setuptools]
packages = ["src"] 