[project]
name = "recommendation-api"
version = "0.1.1"
description = "Recommendation API service"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sentence-transformers>=2.2.2",
    "pydantic==2.4.2",
    "huggingface_hub==0.20.2",
    "numpy>=1.24.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true 

[tool.hatch.build.targets.wheel]
packages = ["recommendation_api/app"]