[project]
name = "recommender_api"
version = "0.1.0"
description = "Genre-based movie and book recommendation API"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "fastapi",
    "uvicorn",
    "scikit-learn",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0"  # Required for FastAPI testing
]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=app"
filterwarnings = [
    "ignore::DeprecationWarning"
]